Files naming refactoring

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -148,8 +148,8 @@
     </div>
 
     <script src="utils/config.js"></script>
-    <script src="utils/agora.js"></script>
-    <script src="utils/avatar.js"></script>
+    <script src="utils/agoraManager.js"></script>
+    <script src="utils/avatarManager.js"></script>
     <script src="components/chat.js"></script>
     <script src="components/controls.js"></script>
     <script src="main.js"></script>
