Added RTM for transcript and messaging feature

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <title>バーチャル彼女 - Virtual Girlfriend</title>
     <link rel="stylesheet" href="styles/main.css">
     <script src="/lib/agora-rtc-sdk-ng/AgoraRTC_N-production.js"></script>
+    <script src="/lib/agora-rtm/agora-rtm.js"></script>
 </head>
 <body>
     <div class="app-container">
