Hide debug info, and clear chat history when user finish checking summary

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,6 +34,9 @@
                 <div class="status-item" id="connectionStatus">
                     <span class="status-dot offline"></span>
                 </div>
+                <button class="btn-icon" id="debugBtn" title="Toggle Debug Info">
+                    ◉
+                </button>
                 <button class="btn-icon" id="languageBtn" title="Language">
                     🌐
                 </button>
