Debug info to clipboard

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -250,6 +250,10 @@ data-i18n="messagePlaceholder"
 
     <!-- Debug Info -->
     <div class="debug-info" id="debugInfo" style="display: none;">
+        <div class="debug-header">
+            <span class="debug-title">Debug Information</span>
+            <button class="btn-copy-debug" id="copyDebugBtn" title="Copy debug info to clipboard">📋</button>
+        </div>
         <div class="debug-item">
             <span class="debug-label">Channel:</span>
             <span class="debug-value" id="debugChannel">-</span>
